conectando front con el back 1.5

--- a/public/pages/docs.html
+++ b/public/pages/docs.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../css/docs-styles.css" />
+        <link rel="stylesheet" href="../css/docs-style.css" />
         <title>TT25257 Proyecto Final</title>
     </head>
     <body>
@@ -947,6 +947,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="back">
+            <a href="http://localhost:3000">Back</a>
         </div>
         <script src="../js/docs-script.js"></script>
     </body>
