--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/index-style.css" />
+        <link rel= "stylesheet" type= "text/css" href= "css/normalize.css" />
         <title>TT25257 Proyecto Final</title>
     </head>
     <body>
-        <div class="container">
-            <h1>Raiz</h1>
+        <div class="box">
+            <h2>Raiz</h2>
             <p class="subtitle">Conectando Frontend y Backend</p>
-            <div class="lista-section">
+            <div>
                 <ul>
-                    <li>
-                        <a href="http://localhost:3000/login">login</a>
+                    <li class="center-item-list">
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/home">home</a>
                     </li>
-                    <li>
-                        <a href="http://localhost:3000/home">home</a>
+                    <li class="center-item-list">
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/docs">docs</a>
                     </li>
-                    <li>
-                        <a href="http://localhost:3000/docs">docs</a>
+                    <li class="center-item-list">
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/login">login</a>
                     </li>
-                    <li>
-                        <a href="http://localhost:3000/about">about</a>
+                    <li class="center-item-list">
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/register">register</a>
+                    </li>
+                    <li class="center-item-list">
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/about">about</a>
                     </li>
                 </ul>
             </div>
         </div>        
-        <script src="js/index-script.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
