--- a/public/pages/product_form.html
+++ b/public/pages/product_form.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "stylesheet" type= "text/css" href= "../css/normalize.css" />
-    <title>Login</title>
+    <title>Product Form</title>
 </head>
 <body>
     <div class="box">
-        <h2>Login</h2>
+        <h2>Product Form</h2>
         <form>
             <div class="user-box">
                 <input type="text" id="username" required>
@@ -20,11 +20,8 @@
                 <label>Password</label>
             </div>
             <div class="button-form">
-                <div id="submit" class="btn-outline btn-outline-primary" href="#">Submit</div>
-                <div id="register" class="button-form-box">
-                    Don't have an account ?
-                    <a class="link-box" href="http://localhost:3000/register">Register</a>
-                </div>
+                <div id="submit" class="btn" href="#">Submit</div>
+                <div id="cancel" class="btn" href="#">Cancel</div>
             </div>
             <div class="back-box">
                 <a class="link-box" href="http://localhost:3000">Back</a>
