--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" type= "text/css" href= "../css/normalize.css" />
     <title>About</title>
 </head>
 <body>
-    <h1>About</h1>
+    <div class="container">
+        <h2>About</h2>
+        <p class="subtitle">
+            Proyecto final del Curso de BackEnd con NodeJS - Talento Tech 2025
+        </p>
+        <p class="subtitle">
+            API REST - Gonzalo Gonzalez
+        </p>
+        <div class="back-box">
+            <a class="link-box" href="http://localhost:3000">Back</a>
+        </div>
+    </div>
 </body>
 </html>
