forms add/edit for products, categories, licences and users

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -13,7 +13,7 @@
             <div class="section-box">
                 <div class="top-section-box">
                     <h3>📋 Productos Disponibles</h2>
-                    <button class="btn-outline btn-outline-success">➕Agregar</button>
+                    <a class="btn-outline btn-outline-success" href="http://localhost:3000/product_form">➕Agregar</a>
                 </div>
                 <div class="botton-section-box">
                     <ul id="lista-products">
@@ -26,7 +26,7 @@
             <div class="section-box">
                 <div class="top-section-box">
                     <h3>📋 Categorias Disponibles</h2>
-                    <button class="btn-outline btn-outline-success">➕Agregar</button>
+                    <a class="btn-outline btn-outline-success" href="http://localhost:3000/category_form">➕Agregar</a>
                 </div>
                 <div class="botton-section-box">
                     <ul id="lista-categories">
@@ -39,7 +39,7 @@
             <div class="section-box">
                 <div class="top-section-box">
                     <h3>📋 Licencias Disponibles</h2>
-                    <button class="btn-outline btn-outline-success">➕Agregar</button>
+                    <a href="http://localhost:3000/licence_form" class="btn-outline btn-outline-success">➕Agregar</a>
                 </div>
                 <div class="botton-section-box">
                     <ul id="lista-licences">
@@ -52,7 +52,7 @@
             <div class="user-box">
                 <div class="top-section-box">
                     <h3>📋 Usuarios Disponibles</h2>
-                    <button class="btn-outline btn-outline-success">➕Agregar</button>
+                    <a href="http://localhost:3000/user_form" class="btn-outline btn-outline-success">➕Agregar</a>
                 </div>
                 <div class="botton-section-box">
                     <ul id="lista-users">
