--- a/public/pages/category_form.html
+++ b/public/pages/category_form.html
@@ -5,32 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "stylesheet" type= "text/css" href= "../css/normalize.css" />
-    <title>Login</title>
+    <title>Category Form</title>
 </head>
 <body>
     <div class="box">
-        <h2>Login</h2>
+        <h2 id="form_title">Add Category</h2>
         <form>
             <div class="input-box">
-                <input type="text" id="username" required>
-                <label>Username</label>
+                <input type="text" id="name" required>
+                <label>Name</label>
             </div>
             <div class="input-box">
-                <input type="password" id="password" required>
-                <label>Password</label>
+                <input type="text" id="description" required>
+                <label>Description</label>
             </div>
             <div class="button-form">
                 <div id="submit" class="btn-outline btn-outline-primary" href="#">Submit</div>
-                <div id="register" class="button-form-box">
-                    Don't have an account ?
-                    <a class="link-box" href="http://localhost:3000/register">Register</a>
-                </div>
+                <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/home">Cancel</a>
             </div>
             <div class="back-box">
                 <a class="link-box" href="http://localhost:3000">Back</a>
             </div>
         </form>
     </div>
-    <script src="../js/login.js"></script>
+    <script src="../js/category_form.js"></script>
 </body>
 </html>
