--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -11,19 +11,19 @@
     <div class="box">
         <h2>Register</h2>
         <form>
-            <div class="user-box">
+            <div class="input-box">
                 <input type="text" id="name" required>
                 <label>Name</label>
             </div>
-            <div class="user-box">
+            <div class="input-box">
                 <input type="text" id="last_name" required>
                 <label>Last Name</label>
             </div>
-            <div class="user-box">
+            <div class="input-box">
                 <input type="text" id="username" required>
                 <label>Username</label>
             </div>
-            <div class="user-box">
+            <div class="input-box">
                 <input type="password" id="password" required>
                 <label>Password</label>
             </div>
