change route name 'home' for 'dashboard'

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <div>
                 <ul>
                     <li class="center-item-list">
-                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/home">home</a>
+                        <a class="btn-outline btn-outline-primary" href="http://localhost:3000/dashboard">dashboard</a>
                     </li>
                     <li class="center-item-list">
                         <a class="btn-outline btn-outline-primary" href="http://localhost:3000/docs">docs</a>
