--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -16,7 +16,7 @@
             API REST - Gonzalo Gonzalez
         </p>
         <div class="back-box">
-            <a class="link-box" href="http://localhost:3000">Back</a>
+            <a class="link-box" href="http://localhost:3000">Home</a>
         </div>
     </div>
 </body>
