--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </div>        
         <script src="../js/home.js"></script>
