--- a/public/pages/licence_form.html
+++ b/public/pages/licence_form.html
@@ -28,7 +28,7 @@
                 <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/home">Cancel</a>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </form>
     </div>
