--- a/public/pages/product_form.html
+++ b/public/pages/product_form.html
@@ -57,10 +57,10 @@
             </div>
             <div class="button-form">
                 <button class="btn-outline btn-outline-primary">Submit</button>
-                <a class="btn-outline btn-outline-danger" href="http://localhost:3000/home">Cancel</a>
+                <a class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </form>
     </div>
