--- a/public/pages/category_form.html
+++ b/public/pages/category_form.html
@@ -21,10 +21,10 @@
             </div>
             <div class="button-form">
                 <div id="submit" class="btn-outline btn-outline-primary" href="#">Submit</div>
-                <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/home">Cancel</a>
+                <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </form>
     </div>
