--- a/public/pages/docs.html
+++ b/public/pages/docs.html
@@ -979,7 +979,7 @@
         </div>
       </div>
       <div class="back-box">
-        <a class="link-box" href="http://localhost:3000">Back</a>
+        <a class="link-box" href="http://localhost:3000">Home</a>
       </div>
     </div>
     <script src="../js/docs.js"></script>
