--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </form>
     </div>
