--- a/public/pages/user_form.html
+++ b/public/pages/user_form.html
@@ -29,10 +29,10 @@
             </div>
             <div class="button-form">
                 <button type="submit" class="btn-outline btn-outline-primary">Submit</button>
-                <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/home">Cancel</a>
+                <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
             </div>
             <div class="back-box">
-                <a class="link-box" href="http://localhost:3000">Back</a>
+                <a class="link-box" href="http://localhost:3000">Home</a>
             </div>
         </form>
     </div>
