--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h2>About</h2>
-        <p class="subtitle">
-            Proyecto final del Curso de BackEnd con NodeJS - Talento Tech 2025
-        </p>
-        <p class="subtitle">
-            API REST - Gonzalo Gonzalez
-        </p>
-        <div class="back-box">
-            <a class="link-box" href="http://localhost:3000">Home</a>
+        <div class="box">
+            <h2>About</h2>
+            <p class="subtitle">
+                Proyecto final del Curso de BackEnd con NodeJS - Talento Tech 2025
+            </p>
+            <p class="subtitle">
+                API REST - Gonzalo Gonzalez
+            </p>
+            <div class="back-box">
+                <a class="link-box" href="http://localhost:3000">Home</a>
+            </div>
         </div>
     </div>
 </body>
