--- a/public/pages/category_form.html
+++ b/public/pages/category_form.html
@@ -10,7 +10,7 @@
 <body>
     <div class="box">
         <h2 id="form_title">Add Category</h2>
-        <form>
+        <form id="category_form">
             <div class="input-box">
                 <input type="text" id="name" required>
                 <label>Name</label>
@@ -20,7 +20,7 @@
                 <label>Description</label>
             </div>
             <div class="button-form">
-                <div id="submit" class="btn-outline btn-outline-primary" href="#">Submit</div>
+                <button type="submit" class="btn-outline btn-outline-primary">Submit</button>
                 <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
             </div>
             <div class="back-box">
