--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-categories">
-                            <li style="justify-content: center; color: #999;">
+                            <li class="item-list">
                                 Cargando datos...
                             </li>
                         </ul>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-licences">
-                            <li style="justify-content: center; color: #999;">
+                            <li class="item-list">
                                 Cargando datos...
                             </li>
                         </ul>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-users">
-                            <li style="justify-content: center; color: #999;">
+                            <li class="item-list">
                                 Cargando datos...
                             </li>
                         </ul>
@@ -68,6 +68,6 @@
                 </div>
             </div>      
         </div>
-        <script src="../js/home.js"></script>
+        <script src="../js/dashboard.js"></script>
     </body>
 </html>
