--- a/public/pages/licence_form.html
+++ b/public/pages/licence_form.html
@@ -10,7 +10,7 @@
 <body>
     <div class="box">
         <h2 id="form_title">Licence Form</h2>
-        <form>
+        <form id="licence_form">
             <div class="input-box">
                 <input type="text" id="name" required>
                 <label>Name</label>
@@ -24,7 +24,7 @@
                 <textarea id="images" rows="4" placeholder="images/star-wars/funko1.webp&#10;images/star-wars/funko2.webp"></textarea>
             </div>
             <div class="button-form">
-                <div id="submit" class="btn-outline btn-outline-primary" href="#">Submit</div>
+                <button class="btn-outline btn-outline-primary">Submit</button>
                 <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
             </div>
             <div class="back-box">
