fix product form - update msg in dashboard

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -11,10 +11,14 @@
             <div class="big-box">
                 <h2>Mi Lista de Items</h2>
                 <p class="subtitle">Conectando Frontend y Backend</p>     
+                <div id="status" class="status hidden"></div>
                 <div class="section-box">
                     <div class="top-section-box">
-                        <h3>📋 Productos Disponibles</h2>
-                        <a class="btn-outline btn-outline-success" href="http://localhost:3000/product_form">➕Agregar</a>
+                        <div class="top-header">
+                            <h3>📋 Productos Disponibles</h2>
+                            <a class="btn-outline btn-outline-success" href="http://localhost:3000/product_form">➕Agregar</a>
+                        </div>
+                        <div id="products-status" class="status hidden"></div>
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-products">
@@ -26,8 +30,11 @@
                 </div>      
                 <div class="section-box">
                     <div class="top-section-box">
-                        <h3>📋 Categorias Disponibles</h2>
-                        <a class="btn-outline btn-outline-success" href="http://localhost:3000/category_form">➕Agregar</a>
+                        <div class="top-header">
+                            <h3>📋 Categorias Disponibles</h2>
+                            <a class="btn-outline btn-outline-success" href="http://localhost:3000/category_form">➕Agregar</a>
+                        </div>
+                        <div id="categories-status" class="status hidden"></div>
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-categories">
@@ -39,8 +46,11 @@
                 </div>
                 <div class="section-box">
                     <div class="top-section-box">
-                        <h3>📋 Licencias Disponibles</h2>
-                        <a href="http://localhost:3000/licence_form" class="btn-outline btn-outline-success">➕Agregar</a>
+                        <div class="top-header">
+                            <h3>📋 Licencias Disponibles</h2>
+                            <a href="http://localhost:3000/licence_form" class="btn-outline btn-outline-success">➕Agregar</a>
+                        </div>
+                        <div id="licences-status" class="status hidden"></div>
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-licences">
@@ -52,8 +62,11 @@
                 </div>
                 <div class="user-box">
                     <div class="top-section-box">
-                        <h3>📋 Usuarios Disponibles</h2>
-                        <a href="http://localhost:3000/user_form" class="btn-outline btn-outline-success">➕Agregar</a>
+                        <div class="top-header">
+                            <h3>📋 Usuarios Disponibles</h2>
+                            <a href="http://localhost:3000/user_form" class="btn-outline btn-outline-success">➕Agregar</a>
+                        </div>
+                        <div id="users-status" class="status hidden"></div>
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-users">
