--- a/public/pages/product_form.html
+++ b/public/pages/product_form.html
@@ -17,6 +17,10 @@
                     <label>Name</label>
                 </div>
                 <div class="input-box">
+                    <input type="text" id="description" required>
+                    <label>Description</label>
+                </div>
+                <div class="input-box">
                     <input type="text" id="sku" required>
                     <label>Código</label>
                 </div>
@@ -25,7 +29,7 @@
                     <label>Stock</label>
                 </div>
                 <div class="input-box">
-                    <input type="number" id="price" required>
+                    <input type="number" id="price" step="0.01" required>
                     <label>Price</label>
                 </div>
                 <div class="input-box">
