--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="box">
-            <h2>Raiz</h2>
+            <h2>Home</h2>
             <p class="subtitle">Conectando Frontend y Backend</p>
             <div>
                 <ul>
