--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             <h2>Home</h2>
             <p class="subtitle">Conectando Frontend y Backend</p>
             <div>
-                <ul>
+                <ul id="home-list">
                     <li class="center-item-list">
                         <a class="btn-outline btn-outline-primary" href="http://localhost:3000/dashboard">dashboard</a>
                     </li>
