integracion de la coleccion de roles a usuarios

--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -60,7 +60,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="user-box">
+                <div class="section-box">
                     <div class="top-section-box">
                         <div class="top-header">
                             <h3>📋 Usuarios Disponibles</h2>
@@ -70,6 +70,22 @@
                     </div>
                     <div class="botton-section-box">
                         <ul id="lista-users">
+                            <li class="item-list">
+                                Cargando datos...
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-box">
+                    <div class="top-section-box">
+                        <div class="top-header">
+                            <h3>📋 Roles Disponibles</h2>
+                            <a href="http://localhost:3000/role_form" class="btn-outline btn-outline-success">➕Agregar</a>
+                        </div>
+                        <div id="roles-status" class="status hidden"></div>
+                    </div>
+                    <div class="botton-section-box">
+                        <ul id="lista-roles">
                             <li class="item-list">
                                 Cargando datos...
                             </li>
