--- a/public/pages/user_form.html
+++ b/public/pages/user_form.html
@@ -27,6 +27,11 @@
                 <input type="password" id="password" required>
                 <label id="label_pwd">Password</label>
             </div>
+            <div class="input-box">
+                <select id="role" required>
+                </select>
+                <label for="role">Rol</label>
+            </div>
             <div class="button-form">
                 <button type="submit" class="btn-outline btn-outline-primary">Submit</button>
                 <a id="cancel" class="btn-outline btn-outline-danger" href="http://localhost:3000/dashboard">Cancel</a>
