add validation and schemas

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <div class="box">
-            <h2>About</h2>
+            <h2>API REST - Gonzalo Gonzalez</h2>
             <p class="subtitle">
                 Proyecto final del Curso de BackEnd con NodeJS - Talento Tech 2025
             </p>
+            <h3>Tecnologias implementadas</h3>
             <p class="subtitle">
-                API REST - Gonzalo Gonzalez
+                express, dotenv, cors, firebase, zod y JWT
             </p>
             <div class="back-box">
                 <a class="link-box" href="http://localhost:3000">Home</a>
